--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-h1. TarsosDSP
+h1. TarsosDSP "Malaryta" distribution
 
 TarsosDSP is a Java library for audio processing. Its aim is to provide an easy-to-use interface to practical audio (signal) processing algorithms implemented, as simply as possible, in pure Java and without any other external dependencies. TarsosDSP features an implementation of a percussion onset detector and a number of pitch detection algorithms: YIN, the Mcleod Pitch method and a "Dynamic Wavelet Algorithm Pitch Tracking" algorithm. Also included is a Goertzel DTMF(Dual tone multi frequency) decoding algorithm, a time stretch algorithm (WSOLA), resampling, filters, simple synthesis, some audio effects, and a pitch shifting algorithm.
  
@@ -16,6 +16,33 @@ dispatcher.run();
 
 h2. Quickly Getting Started with TarsosDSP
 
+The original version of TarsosDSP was built using "Apache Ant":http://ant.apache.org/. But it was decided to move it to "Apache Maven":http://maven.apache.org/ and publish in main Maven repository. Such a library can be widely used and it will be much easily from a piblic maven repository.
+
+The original version is on Ant still, it will be changed as fast as the main developer will became used to Maven. The code in the both versions is the same. 
+
+h3. Getting the Malaryta version
+
+"Malaryta" release is built only from source code. To build from source, you need "Apache Maven":http://maven.apache.org/ and "git":http://git-scm.com/ installed on your system. 
+
+The following commands fetch the source and build the library and example jars: 
+
+<pre><code>git clone https://github.com/rikkimongoose/TarsosDSP.git
+cd TarsosDSP/TarsosDSP
+mvn install #Builds the core TarsosDSP library
+cd ../TarsosDSPExamples
+mvn install #Builds all the TarsosDSP examples
+</code></pre>
+
+javadoc support will be added soon.
+
+"Malaryta" release is provided to you by "RikkiMongoose":http://github.com/rikkimongoose (idea, documents, git things) and "Ultar":http://github.com/ultar (converting to maven, refactoring).
+
+We hope it will became the main branch as soon as possible.
+
+Talking about the title - Malaryta is the capital of Malaryta Raion of Brest Region in Republic of Belarus. Both of developers spent their childhood in Brest, and we think that title Maloryta is as strange as Ubuntu or Whistler.
+
+h3. Getting the original version
+
 Head over to the "TarsosDSP release repository":http://tarsos.0110.be/releases/TarsosDSP/ and download the latest "TarsosDSP library":http://tarsos.0110.be/releases/TarsosDSP/TarsosDSP-latest/TarsosDSP-latest.jar. To get up to speed quickly, check the "TarsosDSP Example applications":http://tarsos.0110.be/releases/TarsosDSP/TarsosDSP-latest/TarsosDSP-latest-Examples/ for inspiration and consult the "API documentation":http://tarsos.0110.be/releases/TarsosDSP/TarsosDSP-latest/TarsosDSP-latest-Documentation/. If you, for some reason, want to build from source, you need "Apache Ant":http://ant.apache.org/ and "git":http://git-scm.com/ installed on your system. The following commands fetch the source and build the library and example jars: 
 <pre><code>git clone https://JorenSix@github.com/JorenSix/TarsosDSP.git
 cd TarsosDSP/build
@@ -25,7 +52,20 @@ ant javadoc #Creates the documentation in TarsosDSP/doc
 </code></pre>
 When everything runs correctly you should be able to run all example applications and have the latest version of the TarsosDSP library for inclusion in your projects. Also the Javadoc documentation for the API should be available in TarsosDSP/doc. Drop me a line if you use TarsosDSP in your project. Always nice to hear how this software is used.
  
+ 
 h2. Source Code Organization 
+
+h3. Malaryta release
+
+The library is separated to 2 projects: TarsosDSP (main core) and TarsosDSPExamples (examples). They have different POM's and are built independently.
+
+* @TarsosDSP/src@ contains the source files of the core DSP libraries. 
+* @TarsosDSP/test@ contains unit tests for some of the DSP functionality.. 
+* @TarsosDSP/target@ contains MAVEN build files.
+* @TarsosDSPExamples/src/main@ contains a couple of example applications with a Java Swing user interface.
+* @TarsosDSPExamples/target@ contains builded versions example applications.
+
+h3. Original verison
 
 The source tree is divided in three directories: 
 * @src@ contains the source files of the core DSP libraries. 
