--- a/README.textile
+++ b/README.textile
@@ -63,7 +63,7 @@ mvn install #Builds all the TarsosDSP examples
 
  
  
-h2. Source Code Organization 
+h2. Source Code Organization & Developing
 
 The library is separated to 2 projects: TarsosDSP (main core) and TarsosDSPExamples (examples). They have different POM's and are built independently.
 
@@ -75,8 +75,11 @@ The library is separated to 2 projects: TarsosDSP (main core) and TarsosDSPExamp
 * @TarsosDSPExamples/target@ contains builded versions example applications.
 * @build@ contains ANT build files. Either to build Java documentation or runnable JAR-files for the example applications.  
 
+To make development with eclipse easy, symlink the following and make them source files in your TarsosDSP eclipse project.
 <pre><code>
-
+test -f src || ln -s TarsosDSP/src/main/java/ src
+test -f examples || ln -s TarsosDSPExamples/src/main/java/ examples
+test -f tests || ln -s TarsosDSP/src/test/java tests 
 </code></pre>
 
 
@@ -126,6 +129,6 @@ Included a resample feature, implemented by libresample4j. Together with the WSO
 
 
 <dt>Version 1.5</dt><dd>2013-04-30</dd>
-Converted TarsosDSP to maven. This is known as the Malaryta-release. The "Malaryta" release is provided to you by "RikkiMongoose":http://github.com/rikkimongoose (idea, documents, git things) and "Ultar":http://github.com/ultar (converting to maven, refactoring). Malaryta is the capital of Malaryta Raion, Brest Region in the Republic of Belarus. Both of developers spent their childhood in Brest, and think that title Malaryta is as strange as Ubuntu or Whistler. The 1.5 release also includes various FFT window functions from the cool "Minim project":http://code.compartmental.net/tools/minim/: by Damien Di Fede. 
+Converted TarsosDSP to maven. This is known as the Malaryta-release. The "Malaryta" release is provided to you by "RikkiMongoose":http://github.com/rikkimongoose (idea, documents, git things) and "Ultar":http://github.com/ultar (converting to maven, refactoring). Malaryta is the capital of Malaryta Raion, Brest Region in the Republic of Belarus. Both of developers spent their childhood in Brest, and think that title Malaryta is as strange as Ubuntu or Whistler. The 1.5 release also includes various FFT window functions from the cool "Minim project":http://code.compartmental.net/tools/minim/ by Damien Di Fede. 
 
 
